fixed button overlapping navbar and footer

--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -8,4 +8,5 @@ footer {
   font-weight: bold;
   text-align: center;
   color: #ffffff;
+  z-index: 999;
 }
