--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   background-color: #ffffff;
+  z-index: 999;
 }
 a {
   padding: 15px;
